Added boostrap using libman and documented on _layout.cshtml

--- a/eCommerceSite/Views/Shared/_Layout.cshtml
+++ b/eCommerceSite/Views/Shared/_Layout.cshtml
@@ -46,3 +46,5 @@
     @RenderSection("Scripts", required: false)
 </body>
 </html>
+<!--In order to install a newer version of bootstrap right click lib -> add -> client side library -> type 'twitter bootstrap' -> can add all but add what is neccessary,
+    then delete previous version of the files which is located in the dist folder.-->
