Added jquery validate with libman

--- a/eCommerceSite/Views/Shared/_Layout.cshtml
+++ b/eCommerceSite/Views/Shared/_Layout.cshtml
@@ -48,4 +48,7 @@
 </html>
 <!--In order to install a newer version of bootstrap right click lib -> add -> client side library -> type 'twitter bootstrap' -> can add all but add what is neccessary,
     then delete previous version of the files which is located in the dist folder.
-    For jquery same as above but will add by typing jquery with latest version and delete dist folder in jquery folder.-->
+    For jquery same as above but will add by typing jquery with latest version and delete dist folder in jquery folder.
+    same as above for jquery-validation but difference is typing in jquery-validation to install latest version and then delete dist folder in jquery-validation folder.
+    same as above for jquery-validation-unobtrusive.
+    can also delete the license if you wanted too.-->
