Created login page

--- a/eCommerceSite/Views/Shared/_Layout.cshtml
+++ b/eCommerceSite/Views/Shared/_Layout.cshtml
@@ -33,6 +33,11 @@
                                 Register
                             </a> 
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="User" asp-action="Login">
+                                Log In
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
