--- a/eCommerceSite/Views/_ViewImports.cshtml
+++ b/eCommerceSite/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using eCommerceSite
 @using eCommerceSite.Models
+@using Microsoft.AspNetCore.Http
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@* ViewImports will add the using to every single view incluing the _layout*@
