Added username greeting to navigation when logged in

--- a/eCommerceSite/Views/Shared/_Layout.cshtml
+++ b/eCommerceSite/Views/Shared/_Layout.cshtml
@@ -1,9 +1,27 @@
-﻿
+﻿@using Microsoft.EntityFrameworkCore
 @* creating a way to tell the user that they are logged in *@
 @*       Interface V, used for flexibility, can swap out components without breaking anything*@
 @inject IHttpContextAccessor sessionData
+@inject eCommerceSite.Data.ProductContext db 
 @{
     int? userId = sessionData.HttpContext.Session.GetInt32("UserId");
+    string username = null;
+    if( userId.HasValue )
+    {   
+        // can increase performance when multiple users are logging in, database, one less database call per user per request
+        string userNameFromSession = sessionData.HttpContext.Session.GetString("Usernam");
+        if ( userNameFromSession == null )
+        {
+            username = await (from u in db.UserAccounts
+                              where u.UserId == userId
+                              select u.Username).SingleOrDefaultAsync();
+            sessionData.HttpContext.Session.SetString("Username", username);
+        }
+        else
+        {
+            username = userNameFromSession;
+        }
+    }
 }
 
 <!DOCTYPE html>
@@ -52,7 +70,7 @@
                         else
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark disabled">>Welcome back </a>
+                                <a class="nav-link text-dark disabled">Welcome back @username! </a>
                             </li>
                         }
                     </ul>
